<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FFFFFF"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="15dp"
            android:textStyle="bold"
            android:textColor="@color/primaryText"
            android:fontFamily="serif-monospace"
            android:textSize="35sp"
            android:text="@string/Title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="15dp"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:textColor="@color/primaryText"
            android:textSize="15sp"
            android:text="@string/Subtitle"/>

        <View
            style="@style/Bar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:textStyle="bold"
            android:textColor="@color/primaryText"
            android:fontFamily="serif-monospace"
            android:textSize="15sp"
            android:text="@string/Address"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/primaryText"
            android:fontFamily="serif-monospace"
            android:textSize="15sp"
            android:text="@string/Phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/secondaryText"
            android:paddingTop="20dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:paddingBottom="10dp"
            android:fontFamily="serif-monospace"
            android:textSize="15sp"
            android:text="@string/Description"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="left"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:src="@drawable/friedlumpia" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="right"
                android:paddingLeft="10dp"
                android:paddingRight="15dp"
                android:src="@drawable/friedpickles" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            android:textStyle="bold"
            android:textColor="@color/secondaryText"
            android:fontFamily="serif-monospace"
            android:textSize="15sp"
            android:text="@string/Hours"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textStyle="bold"
            android:textColor="@color/secondaryText"
            android:fontFamily="serif-monospace"
            android:textSize="15sp"
            android:text="@string/Sunday"/>

        <View
            style="@style/Bar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            android:textStyle="bold"
            android:textColor="@color/primaryText"
            android:fontFamily="serif-monospace"
            android:textSize="15sp"
            android:text="@string/Email"/>

    </LinearLayout>
</ScrollView>
